logic and html update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>We are going to generate a randome quote</h1>
 
-    <button id="generator">Generate Randome Quote</button>
+    <button id="generator" onclick="generate_random_quote()">Generate Randome Quote</button>
 
     <p id="quote_container">No quotes generated yet</p>
 </body>
